@@ -242,7 +242,7 @@ public class NativeJavaObject
                     && javaObject instanceof Boolean)
                 {
                     boolean b = ((Boolean)javaObject).booleanValue();
-                    value = ScriptRuntime.wrapNumber(b ? 1.0 : 0.0);
+                    value = b ? ScriptRuntime.wrapNumber(1.0) : ScriptRuntime.zeroObj;
                 } else {
                     value = javaObject.toString();
                 }
@@ -825,7 +825,7 @@ public class NativeJavaObject
                                             Byte.MAX_VALUE));
         }
 
-        return new Double(toDouble(value));
+        return Double.valueOf(toDouble(value));
     }
 
 
